--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+calendar:
+    resource: '../src/Controller/GoogleCalendarController.php'
+    type: annotation
