DataFixture Bundles + Map bundle + Exercise Api + Filters and Sorting for the training session + Csv exporting advanced features + Chart API

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,3 +7,8 @@ controllers:
 calendar:
     resource: '../src/Controller/GoogleCalendarController.php'
     type: annotation
+
+api_chart_data:
+    path: /api/chart-data
+    controller: App\Controller\Api\ChartApiController::chartData
+    methods: GET
