--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,5 +1,7 @@
 # config/services.yaml
 parameters:
+    # Add any parameters you want to use in your services here
+    api_ninjas_key: '%env(API_NINJAS_KEY)%'
 
 services:
     _defaults:
@@ -26,10 +28,20 @@ services:
         shared: false
 
     # Google calendar service 
-
     App\Service\GoogleCalendarService:
         arguments:
             $clientId: '%env(GOOGLE_CLIENT_ID)%'
             $clientSecret: '%env(GOOGLE_CLIENT_SECRET)%'
             $redirectUri: '%env(GOOGLE_REDIRECT_URI)%'
             $logger: '@logger'
+
+    # QuickChart service configuration
+    App\Service\QuickChartService:
+        arguments:
+            $httpClient: '@http_client'
+
+    # WgerApiService configuration
+    App\Service\WgerApiService:
+        arguments:
+            $httpClient: '@http_client'
+            $apiKey: '%api_ninjas_key%'
