health advanced features and everything

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,10 +1,15 @@
-# config/services.yaml
+
 parameters:
 
 services:
     _defaults:
         autowire: true
         autoconfigure: true
+
+    Nucleos\DompdfBundle\Factory\DompdfFactoryInterface:
+        class: Nucleos\DompdfBundle\Factory\DompdfFactory
+        arguments:
+            $options: { }
 
     # Makes classes in src/ available to be used as services
     App\:
@@ -33,3 +38,5 @@ services:
             $clientSecret: '%env(GOOGLE_CLIENT_SECRET)%'
             $redirectUri: '%env(GOOGLE_REDIRECT_URI)%'
             $logger: '@logger'
+
+  
