--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "geocoder-php/nominatim-provider": "^5.8",
         "google/apiclient": "2.13",
         "knplabs/knp-paginator-bundle": "^6.8",
-        "nucleos/dompdf-bundle": "4.3",
+        "knplabs/knp-time-bundle": "^2.4",
         "league/csv": "^9.23",
+        "nucleos/dompdf-bundle": "4.3",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
@@ -28,6 +29,7 @@
         "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
         "symfony/http-client": "6.4.*",
+        "symfony/http-foundation": "6.4.*",
         "symfony/intl": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/mime": "6.4.*",
@@ -51,7 +53,7 @@
         "twig/twig": "^2.12|^3.0",
         "twilio/sdk": "^8.5",
         "vich/uploader-bundle": "^2.6",
-        "willdurand/geocoder-bundle": "^5.21"
+        "willdurand/geocoder-bundle": "^5.22"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.1",
