Last changes for Bundles + apis jouja

--- a/.env
+++ b/.env
@@ -52,3 +52,11 @@ MAILER_DSN=null://null
 TWILIO_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
+
+
+#API KEY FOR NINJAS WORKOUT
+API_NINJAS_KEY=UAU1QS1FF7V4PduPcWl1vQ==kos3RKp3P0f96sNy
+
+#API key for Gemini 
+GEMINI_API_KEY=AIzaSyDEJQyv12p48T8RsWUn1HB9mP1wXSRpH_U
+
