--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,17 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "box/spout": "^3.3",
+        "cmen/google-charts-bundle": "^7.0",
         "doctrine/annotations": "^2.0",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "geocoder-php/google-maps-provider": "^4.8",
+        "geocoder-php/nominatim-provider": "^5.8",
         "google/apiclient": "2.13",
         "knplabs/knp-paginator-bundle": "^6.8",
+        "league/csv": "^9.23",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
@@ -25,10 +28,11 @@
         "symfony/flex": "^2",
         "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/http-client": "6.4.*",
         "symfony/intl": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/mime": "6.4.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/notifier": "6.4.*",
         "symfony/process": "6.4.*",
         "symfony/property-access": "6.4.*",
@@ -40,16 +44,20 @@
         "symfony/string": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
-        "symfony/ux-turbo": "^2.23",
+        "symfony/ux-turbo": "^2.24",
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "tattali/calendar-bundle": "^1.3",
+        "twig/extra-bundle": "^3.20",
+        "twig/string-extra": "*",
         "twig/twig": "^2.12|^3.0",
         "twilio/sdk": "^8.5",
-        "vich/uploader-bundle": "^2.6"
+        "vich/uploader-bundle": "^2.6",
+        "willdurand/geocoder-bundle": "^5.21"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.1",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
