--- a/compose.yaml
+++ b/compose.yaml
@@ -1,20 +1,29 @@
-
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
+  mercure:
+    image: dunglas/mercure
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
+      SERVER_NAME: ':80'  # ✅ Required for Caddy to parse config correctly
+      MERCURE_PUBLISHER_JWT_KEY: 'ZsFrYdJM9ITgKf18UwwVbEiPxqCkGU3dla3CcPLq7xR4UB2hcmIwTtcQPpafFEHQ'
+      MERCURE_SUBSCRIBER_JWT_KEY: 'ZsFrYdJM9ITgKf18UwwVbEiPxqCkGU3dla3CcPLq7xR4UB2hcmIwTtcQPpafFEHQ'
+      MERCURE_ALLOW_ANONYMOUS: 1
+      MERCURE_CORS_ALLOWED_ORIGINS: http://127.0.0.1:8000 http://localhost:8000
+      MERCURE_EXTRA_DIRECTIVES: |
+        anonymous
+        cors_origins http://127.0.0.1:8000 http://localhost:8000
+        publish_origins http://127.0.0.1:8000 http://localhost:8000
+    command: /usr/bin/caddy run --config /etc/caddy/Caddyfile
+    ports:
+      - "54654:80"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/.well-known/mercure"]
+      timeout: 5s
+      retries: 5
+      start_period: 60s
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - mercure_data:/data
+      - mercure_config:/config
 
 volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  mercure_data:
+  mercure_config:
