--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "type": "project",
     "license": "proprietary",
-    "minimum-stability": "stable",
+    "minimum-stability": "rc",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
@@ -20,6 +20,7 @@
         "knplabs/knp-time-bundle": "^2.4",
         "league/csv": "^9.23",
         "nucleos/dompdf-bundle": "4.3",
+        "league/csv": "^9.23",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
@@ -34,6 +35,9 @@
         "symfony/http-foundation": "6.4.*",
         "symfony/intl": "6.4.*",
         "symfony/mailer": "6.4.*",
+        "symfony/mercure": "^0.6.5",
+        "symfony/mercure-bundle": "^0.3.9",
+        "symfony/mercure-notifier": "6.4.*",
         "symfony/mime": "6.4.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/notifier": "6.4.*",
@@ -47,9 +51,13 @@
         "symfony/string": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/ux-icons": "^2.24",
         "symfony/ux-turbo": "^2.24",
+        "symfony/ux-twig-component": "^2.24",
+        "symfony/ux-typed": "^2.24",
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "6.4.*",
         "tattali/calendar-bundle": "^1.3",
         "twig/extra-bundle": "^3.20",
@@ -118,5 +126,4 @@
             "require": "6.4.*"
         }
     }
-    
 }
