--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ###> symfony/framework-bundle ###
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -23,3 +24,7 @@
 /assets/vendor/
 ###< symfony/asset-mapper ###
 "config/google/credentials.json" 
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
