--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=eb5e07f30e5138383d65cf67773c83b6
+APP_SECRET=#eb5e07f30e5138383d65cf67773c83b6
 ###< symfony/framework-bundle ###
 
 
@@ -43,20 +43,19 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> google/apiclient ###
-
-
-###< google/apiclient ###
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_AUTH_CONFIG=#%kernel.project_dir%/path/to/file.json
+GOOGLE_REDIRECT_URI=#http://localhost:8000/calendar/auth/google/callback
 
 
 ###< Twilio/apiclient ###
 TWILIO_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
-
-
 #API KEY FOR NINJAS WORKOUT
-API_NINJAS_KEY=UAU1QS1FF7V4PduPcWl1vQ==kos3RKp3P0f96sNy
+API_NINJAS_KEY=
 
 #API key for Gemini 
-GEMINI_API_KEY=AIzaSyDEJQyv12p48T8RsWUn1HB9mP1wXSRpH_U
+GEMINI_API_KEY=
 
