--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "geocoder-php/nominatim-provider": "^5.8",
         "google/apiclient": "2.13",
         "knplabs/knp-paginator-bundle": "^6.8",
+        "knplabs/knp-time-bundle": "^2.4",
         "league/csv": "^9.23",
+        "nucleos/dompdf-bundle": "^4.3",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
