--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,12 +1,13 @@
-# config/services.yaml
 parameters:
+    elevenlabs.api_key: '%env(ELEVENLABS_API_KEY)%'
+    huggingface.api_key: '%env(HUGGINGFACE_API_KEY)%'
+    assemblyai.api_key: '%env(ASSEMBLYAI_API_KEY)%' # ✅ NEW
 
 services:
     _defaults:
         autowire: true
         autoconfigure: true
 
-    # Makes classes in src/ available to be used as services
     App\:
         resource: '../src/'
         exclude:
@@ -25,11 +26,32 @@ services:
         class: Symfony\Component\Finder\Finder
         shared: false
 
-    # Google calendar service 
-
+    # Google Calendar Service
     App\Service\GoogleCalendarService:
         arguments:
             $clientId: '%env(GOOGLE_CLIENT_ID)%'
             $clientSecret: '%env(GOOGLE_CLIENT_SECRET)%'
             $redirectUri: '%env(GOOGLE_REDIRECT_URI)%'
+            $logger: '@logger'
+
+    # Mercure Hub service for publishing Turbo Streams
+    Symfony\Component\Mercure\HubInterface: '@mercure.hub.default'
+
+    # ElevenLabs TTS Service
+    App\Service\ElevenLabsTTSService:
+        arguments:
+            $elevenLabsApiKey: '%elevenlabs.api_key%'
+
+    # Hugging Face Sentiment Service
+    App\Service\SentimentService:
+        arguments:
+            $huggingfaceApiKey: '%huggingface.api_key%'
+
+    # Bad Words Detection Service
+    App\Service\BadWordsService: ~
+
+    # ✅ AssemblyAI Service
+    App\Service\AssemblyAIService:
+        arguments:
+            $assemblyAiApiKey: '%assemblyai.api_key%'
             $logger: '@logger'
