--- a/.env
+++ b/.env
@@ -64,10 +64,10 @@ MERCURE_DSN=mercure://default
 ELEVENLABS_API_KEY=sk_4dd65c586ffa2e6c9192f5a544678beabe1eb31c182c6417
 
 
-HUGGINGFACE_API_KEY=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
+HUGGINGFACE_API_KEY=
 
 
-ASSEMBLYAI_API_KEY=773f39499fd548efa9d69ea89a969b57
+ASSEMBLYAI_API_KEY=
 
 ###< symfony/mercure-bundle ###
 
