copie claim_claimaction

--- a/.env
+++ b/.env
@@ -61,7 +61,7 @@ MERCURE_DSN=mercure://default
 
 
 
-ELEVENLABS_API_KEY=sk_4dd65c586ffa2e6c9192f5a544678beabe1eb31c182c6417
+ELEVENLABS_API_KEY=
 
 
 HUGGINGFACE_API_KEY=
