full team and tournament work with apis and bundles

--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,23 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "cmen/google-charts-bundle": "^7.0",
-        "doctrine/annotations": "^2.0",
+        "doctrine/annotations": "*",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "excelwebzone/recaptcha-bundle": "^1.5",
         "geocoder-php/google-maps-provider": "^4.8",
         "geocoder-php/nominatim-provider": "^5.8",
-        "excelwebzone/recaptcha-bundle": "^1.5",
         "google/apiclient": "2.13",
         "guzzlehttp/guzzle": "^7.9",
+        "jms/serializer": "^3.32",
+        "jms/serializer-bundle": "^5.5",
         "knplabs/knp-paginator-bundle": "^6.8",
         "knplabs/knp-time-bundle": "^2.4",
         "league/csv": "^9.23",
-        "nucleos/dompdf-bundle": "^4.3",
         "lexik/jwt-authentication-bundle": "^2.18",
+        "nucleos/dompdf-bundle": "^4.3",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
