--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=#eb5e07f30e5138383d65cf67773c83b6
+APP_SECRET=eb5e07f30e5138383d65cf67773c83b6
 ###< symfony/framework-bundle ###
 
 
@@ -45,20 +45,20 @@ MAILER_DSN=smtp://amorrions@gmail.com:mqbglkazzypbbxyb@smtp.gmail.com:587?encryp
 ###> google/apiclient ###
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_AUTH_CONFIG=#%kernel.project_dir%/path/to/file.json
-GOOGLE_REDIRECT_URI=#http://localhost:8000/calendar/auth/google/callback
+GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+GOOGLE_REDIRECT_URI=http://localhost:8000/calendar/auth/google/callback
 
 
 ###< Twilio/apiclient ###
 TWILIO_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_PHONE_NUMBER=
+TWILIO_AUTH_TOKEN=cc7acafc537d619e46454099b8f766c4
+TWILIO_PHONE_NUMBER=+19403294446
 
 #API KEY FOR NINJAS WORKOUT
-API_NINJAS_KEY=
+API_NINJAS_KEY=UAU1QS1FF7V4PduPcWl1vQ==kos3RKp3P0f96sNy
 
 #API key for Gemini 
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyDEJQyv12p48T8RsWUn1HB9mP1wXSRpH_U
 
 RECAPTCHA_PUBLIC_KEY=6LdH3iorAAAAAPWhrx3B8e6UKpZWG6G38LL2DkML
 RECAPTCHA_PRIVATE_KEY=6LdH3iorAAAAACfCzS_vfDr2ilEnD7WRbHcPvRHq
