--- a/.env
+++ b/.env
@@ -97,13 +97,13 @@ MERCURE_DSN=mercure://default
 
 
 
-ELEVENLABS_API_KEY=
+ELEVENLABS_API_KEY=sk_64656ee0d48b9e10efa9d57459123e538da41421eb9b1145
 
 
 HUGGINGFACE_API_KEY=
 
 
-ASSEMBLYAI_API_KEY=
+ASSEMBLYAI_API_KEY=773f39499fd548efa9d69ea89a969b57
 
 ###< symfony/mercure-bundle ###
 
