--- a/composer.json
+++ b/composer.json
@@ -60,11 +60,11 @@
         "symfony/twig-bundle": "6.4.*",
         "symfony/ux-icons": "^2.24",
         "symfony/ux-turbo": "^2.24",
-        "symfony/ux-twig-component": "^2.24",
-        "symfony/ux-typed": "^2.24",
+        "symfony/ux-twig-component": "*",
+        "symfony/ux-typed": "*",
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
-        "symfony/webpack-encore-bundle": "^2.2",
+        "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "6.4.*",
         "tattali/calendar-bundle": "^1.3",
         "twig/extra-bundle": "^3.20",
